change keyboard name

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,4 +5,4 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 # CONFIG_NICE_VIEW_WIDGET_INVERTED=y
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+CONFIG_ZMK_KEYBOARD_NAME="Corne v4"
