--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,4 +6,5 @@
 # CONFIG_ZMK_DISPLAY=y
 # CONFIG_NICE_VIEW_WIDGET_INVERTED=y
 CONFIG_ZMK_KEYBOARD_NAME="Corne v4"
+CONFIG_ZMK_PM_SOFT_OFF=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
